# tauri-plugin-sql

./: .eslintrc.cjs  .eslintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rollup.config.js  rustfmt.toml  tauri-plugin-sql.code-workspace  tsconfig.json
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: clippy.yml  covector-status.yml  test.yml  vue-todo.yml
dist-js/: index.cjs  index.d.ts  index.js  index.min.js  index.min.js.map  index.mjs  index.mjs.map
example/vue-todos/: components.d.ts  package.json  tailwind.config.ts
example/vue-todos/src-tauri/: tauri.linux.conf.json
example/vue-todos/src/components/: AskForTask.vue  ListTodos.vue
example/vue-todos/src/services/: Storage.ts
example/vue-todos/src/stores/: todos.ts
examples/svelte-ts/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
examples/svelte-ts/src/: App.svelte  app.css  app.postcss  main.ts
examples/svelte-ts/src-tauri/: Cargo.toml
examples/svelte-ts/src-tauri/migrations/: 1.sql
examples/svelte-ts/src-tauri/src/: main.rs
examples/svelte-ts/src/lib/components/header/: Header.svelte
examples/svelte-ts/src/lib/components/theme/: Svg.svelte  ThemeSwitcher.svelte
examples/svelte-ts/src/lib/components/todo/create/: AddIcon.svelte  TodoCreator.svelte
examples/svelte-ts/src/lib/components/todo/display/: Table.svelte  TableBody.svelte  TableHeaders.svelte  Todo.svelte  TodoDisplay.svelte
examples/svelte-ts/src/lib/stores/: theme.ts  todoStore.ts
examples/todo/svelte-ts/: package.json
examples/todo/svelte-ts/src/: App.svelte
examples/todo/svelte-ts/src-tauri/: tauri.conf.json
examples/todo/svelte-ts/src/lib/components/todo/create/: TodoCreator.svelte
examples/todos-app/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
examples/todos-app/src/: app.html  hooks.ts
examples/todos-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/todos-app/src-tauri/migrations/: 1.sql
examples/todos-app/src-tauri/src/: main.rs
examples/todos-app/src/components/: DisplayCounts.svelte  List.svelte  NewItem.svelte
examples/todos-app/src/components/icons/: CheckboxIcon.svelte  PlusIcon.svelte  TrashIcon.svelte
examples/todos-app/src/models/: Todo.ts
examples/todos-app/src/routes/: +layout.js  __layout.svelte  index.svelte
examples/todos-app/src/services/: Storage.ts
examples/todos-app/src/stores/: todos.ts
examples/todos-app/src/styles/: tailwind-output.css
examples/vue-todos/: .eslintrc  .gitignore  .prettierrc  .prettierrc.cjs  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  test.db  tsconfig.json  vite.config.ts
examples/vue-todos/src/: App.vue  main.ts
examples/vue-todos/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
examples/vue-todos/src-tauri/icons/: icon.icns
examples/vue-todos/src-tauri/migrations/: 1.sql
examples/vue-todos/src-tauri/src/: main.rs
examples/vue-todos/src/components/: FooterSummary.vue  ListTodos.vue  TodoItem.vue
examples/vue-todos/src/models/: Todo.ts
examples/vue-todos/src/services/: Storage.ts
examples/vue-todos/src/stores/: todos.ts
src/: deserialize.rs  lib.rs  plugin.rs
src/.cargo/: config.toml
webview-dist/: index.cjs  index.cjs.map  index.d.ts  index.js  index.js.map  index.min.js  index.mjs
webview-src/: .gitignore  index.ts  rollup.config.js  tsconfig.json
