[package]
name = "tauri-plugin-sql"
version = "0.1.0"
authors = ["Tauri Programme within The Commons Conservancy"]
description = "A Tauri plugin for easily interfacing with SQL databases"
license = "Apache-2.0 OR MIT"
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tracing = "0.1"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "json"] }
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
tauri = "1"
base64 = "0.13"

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
mssql = ["sqlx/mssql"]

[profile.release]
lto = true
opt-level = 3
