[package]
name = "todos-app"
version = "1.1.0"
description = "Handy TODOs app!"
authors = ["Parker McMullin <parker.mcmullin01@gmail.com>"]
license = ""
repository = ""
default-run = "todos-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }
tauri-plugin-sql = { path = "../../..", features = ["sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
