[package]
name = "todos-app"
version = "1.2.0"
description = "Handy TODOs app!"
authors = ["Parker McMullin <parker.mcmullin01@gmail.com>"]
license = ""
repository = ""
default-run = "todos-app"
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
tauri-plugin-sql = { path = "../../..", features = ["sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
