[package]
name = "todos-app"
version = "1.1.0"
description = "Handy TODOs app!"
authors = [
  "Parker McMullin <parker.mcmullin01@gmail.com>",
  "Ken Snyder <ken@ken.net>",
]
license = ""
repository = ""
default-run = "todos-app"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tauri-plugin-sql = { path = "../../..", features = ["sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
